Fix whitespace slightly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@ div#getapps h2{
 }
 
 div#getapps .row {
-	margin-top: 40px;
+	margin-top: 30px;
 	margin-bottom: 47px;
 	text-align: center;
 }
